# cobol-o-matic

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  analyse.py  pyproject.toml  requirements.txt
.claude/skills/clean-workspace/: SKILL.md
.claude/skills/configure-workspace/: SKILL.md
.claude/skills/repo-standards/: SKILL.md
.claude/skills/run-analysis/: SKILL.md
docs/: feeding-the-factory.md
examples/: benchmark-suite.yaml  cash-account.yaml  cbsa.yaml  genapp.yaml  zbank.yaml
examples/carddemo-output/: README.md  application.md
examples/carddemo-output/business-rules/: cbact01c.md  cbact02c.md  cbact03c.md  cbact04c.md  cbcus01c.md  (+26 more)
examples/cbsa-output/: README.md  application.md
orchestrator/: __init__.py  agents.py  cli.py  config.py  models.py  parser.py  runner.py  stager.py  state.py  tracing.py  validator.py
prompts/: __init__.py  _helpers.py  business_rules.py  critic.py  data.py  flow.py  implementation.py  integration.py  inventory.py  orchestrator.py  requirements.py  test_specs.py
templates/: application.md  batch-flows.md  behavioral-tests.md  business-rules.md  capabilities.md  copybook-inventory.md  data-contracts.md  data-dictionary.md  data-flows.md  database-operations.md  equivalence-matrix.md  file-layouts.md  implementation-plan.md  interfaces.md  io-map.md  jcl-jobs.md  modernization-notes.md  non-functional.md  program-call-graph.md  program-inventory.md
tests/: conftest.py  test_models.py  test_parser.py  test_shared.py  test_stager.py  test_state.py  test_validator.py
workspace/: CLAUDE.md  config.yaml
(+67 files in other folders)
